<?xml version="1.0"?>
<package format="2">
  <name>l2j</name>
  <version>0.0.1</version>
  <description>
  The l2j package - useful package to estimate extrinsic camera calibration in relation to a base
  coordinate system using the known position and orientation of an ArUco marker.
  https://studmailwhsde-my.sharepoint.com/:f:/g/personal/lukas_stefer_studmail_w-hs_de/EmhtYIReW5lBixCFQX7NsWEBO3PPWgfm4sxrmmuVv0PK4g?e=rDLmgl

  </description>


  <maintainer email="Lukas.Beissner@studmail.w-hs.de">Lukas Beissner </maintainer>
  <maintainer email="Lukas.Stefer@studmail.w-hs.de">Lukas Stefer </maintainer>
  <maintainer email="Jannik.Eichmann@studmail.w-hs.de">Jannik Eichmann </maintainer>


  <license>WTFPL</license>


 <author email="Lukas.Beissner@studmail.w-hs.de">Lukas Beissner </author>
 <author email="Lukas.Stefer@studmail.w-hs.de">Lukas Stefer </author>
 <author email="Jannik.Eichmann@studmail.w-hs.de">Jannik Eichmann </author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
